--- a/A2_3d_Figures/3d_figures.html
+++ b/A2_3d_Figures/3d_figures.html
@@ -18,7 +18,9 @@
 		        initGL(canvas);
 				initShader(gl);
 				// TO DO: create and draw the figures
-				run(gl, []);
+				var pyramid = createPyramid(gl, [-4, 0, -10], [0.1, 1.0, 0.2]);
+
+				run(gl, [pyramid]);
 			}
 	);
 
@@ -27,7 +29,7 @@
 </head>
 <body>
 
-    <canvas id="webglcanvas" style="border: none;" width="500" height="500"></canvas>
+    <canvas id="webglcanvas" style="border: none;" width="800" height="500"></canvas>
 
 </body>
 </html>
