Finished all figures and movements

--- a/A2_3d_Figures/3d_figures.html
+++ b/A2_3d_Figures/3d_figures.html
@@ -19,8 +19,9 @@
 				initShader(gl);
 				// TO DO: create and draw the figures
 				var pyramid = createPyramid(gl, [-4, 0, -10], [0.1, 1.0, 0.2]);
-
-				run(gl, [pyramid]);
+				var octahedron = createOctahedron(gl, [4, 0, -10], [0, 1, 0],canvas.height);
+				var scutoid = createScutoid(gl, [0, 0, -10], [-0.4, 1.0, 0.1]);
+				run(gl, [pyramid, octahedron, scutoid]);
 			}
 	);
 
