--- a/A4_PenguinWalking/threejsmaterials.html
+++ b/A4_PenguinWalking/threejsmaterials.html
@@ -46,7 +46,7 @@
 		<div id="container">
 			<canvas id="webglcanvas" width=1200 height=600></canvas>
 			<div id="title">
-				Solar System - Rodrigo Garcia
+				Penguin Walking - Rodrigo Garcia
 			</div>
 	</body>
 </html>
